--- a/Sbirka.tex
+++ b/Sbirka.tex
@@ -108,7 +108,7 @@
 
 \newcommand{\exercise}[2][]{\ifthenelse{\isempty{#1}}
 	{\np\thispagestyle{empty}\subsubsection*{Domácí úkol -- #2}}
-	{\np\thispagestyle{empty}\np\subsubsection*{Domácí úkol -- #2 \small{\it{(termín odevzdání: {#1})}}}}
+	{\np\thispagestyle{empty}\np\subsubsection*{Domácí úkol -- #2 \small{\it{(zadáno: {#1})}}}}
 }
 
 \makeindex
@@ -153,7 +153,7 @@
 \input{Vzorecky}\np
 
 \begin{homework}
-\exercise[15.10.2024]{Fotonová plachetnice}
+\exercise[1.10.2024]{Fotonová plachetnice}
     Čtvercová plachta o rozměrech $d\times d$ se nachází ve vesmíru ve vzdálenosti $R$ od Slunce.
 	\begin{enumerate}
 		\item Určete, jaká síla bude na plachtu působit díky slunečnímu záření, víte-li, že zářivý výkon Slunce na povrchu Země je $I_{z}$.
@@ -168,7 +168,7 @@
 \end{homework}
 
 \begin{homework}
-\exercise[29.10.2024]{Elektron při Comptonově rozptylu}
+\exercise[15.10.2024]{Elektron při Comptonově rozptylu}
 	\begin{itemize}
 	\item
 		Odvoďte vztah pro úhel $\varphi$, pod kterým vylétá elektron $e^{-}$ po Comptonově rozptylu, a vyjádřete ho pomocí vlnových délek nalétávajícího a rozptýleného fotonu $\lambda,\lambda'$ a Comptonovy vlnové délky $\lambda_{C}=h/(m_{e}c)$.
@@ -184,7 +184,7 @@
 \end{homework}
 
 \begin{homework}
-	\exercise[26.11.2024]{Klasický model atomu vodíku}
+	\exercise[12.11.2024]{Klasický model atomu vodíku}
 	\begin{itemize}
 		\item     
 			Nalezněte vztah pro frekvenci kruhového pohybu elektronu v klasickém modelu vodíkového atomu za předpokladu, že elektron neztrácí energii vyzařováním a že se nachází ve vzdálenosti $r=\beta a_{0}$ od protonu, kde $a_{0}$ je Bohrův poloměr.
@@ -204,7 +204,7 @@
 \end{homework}
 
 \begin{homework}
-	\exercise[10.12.2024]{Rozměr vzbuzeného vodíku}
+	\exercise[26.11.2024]{Rozměr vzbuzeného vodíku}
 		Vodík se nachází ve vzbuzeném $2s$ stavu.
 		Jeho radiální část vlnové funkce je tedy
 		\begin{equation*}
@@ -236,7 +236,7 @@
 \end{homework}
 
 \begin{homework}
-	\exercise[7.1.2025]{Zhroucení Slunce}
+	\exercise[10.12.2025]{Zhroucení Slunce}
 		Předpokládejte, že naše Slunce se po vyhoření zhroutí a vznikne z něj bílý trpaslík tvořený pouze uhlíkem $^{12}\mathrm{C}$.  
 		Předpokládejte, že hustota trpaslíka je konstantní.
 
@@ -266,6 +266,32 @@
 
 		\newpage
 \end{homework}
+
+\begin{homework}
+	\exercise[30.9.2025]{Dewarova nádoba (termoska)}
+		Dewarova nádoba se používá k udržení teploty kapalin, a to jak studených (například kapalný dusík), tak horkých (například káva nebo čaj).
+		Nádoba má dvojitou lesklou stěnu z vysoceodrazivého materiálu, uvnitř které je vakuum.
+		Vakuum zabraňuje přenosu tepla vedením a prouděním, zatímco lesklé stěny minimalizují přenos tepla zářením.
+
+		\begin{center}
+			\includegraphics[width=0.8\linewidth]{Dewarka.png}
+		\end{center}
+
+		Uvažujte že reflexivita stěn nádoby je $r=0\c98$ (platí například pro postříbřené povrchy).
+		Předpokládejte, že $r+\epsilon=1$, kde $\epsilon$ je emisivita povrchu.
+		Teplotu vnitřní stěny nádoby označme $T_{1}$ a teplotu vnější stěny $T_{2}$, přičemž $T_{2}>T_{1}$.
+
+		\begin{enumerate}
+			\item
+				Jaká je intenzita vyzařování vnitřního a vnějšího povrchu nádoby?
+
+			\item
+				Jaký je čistý tok energie z vnější stěny na vnitřní stěnu?
+
+			\item
+				Kolikrát je tento tok menší, než kdyby byla reflexivita nulová, tedy kdyby stěny nádoby vyzařovaly jako černé těleso?
+		\end{enumerate}
+	\end{homework}
 
 % \begin{homework}
 % \exercise[9.10.2023]{Žárovka}
