--- a/Sbirka.tex
+++ b/Sbirka.tex
@@ -293,6 +293,34 @@
 		\end{enumerate}
 	\end{homework}
 
+\begin{homework}
+	\exercise[21.10.2025]{Rentgenka}
+    Rentgenka je vakuová trubice, ve které vylétávají ze žhavené katody elektrony, které se urychlují napětím $U$ a které dopadají na anodu.
+    Rentgenové záření pak vzniká dvěma procesy:
+    \begin{enumerate}
+        \item Urychlený elektron vyrazí elektron z atomového obalu materiálu anody (často se jedná o wolfram).
+            Do uvolněné mezery \uv{spadnou} elektrony z vyšších energetických hladin atomu nebo volné elektrony, což vede k vyzáření fotonu s ostrou hodnotou energie.
+        \item Urychlený elektron je v materiálu anody velmi rychle zabržděn, přičemž vyzáří brzdné záření se spojitým energetickým spektrem.
+    \end{enumerate}
+    V další části příkladu uvažujte pouze první proces a předpokládajete, že rentgenové záření je monochromatické (všechny fotony vylétávající z anody mají stejnou energii).
+
+    \begin{center}
+        \includegraphics[width=0.8\linewidth]{Rentgenka.png}
+    \end{center}
+    \begin{enumerate}
+    \item 
+        Jaká musí být vlnová délka $\lambda$ rentgenového záření, aby se po rozptylu na elektronech o úhel $\vartheta=60^{\mathrm{o}}$ zvětšila o $\alpha=4\,\%$?
+    \item 
+        Vyjádřete energii jednotlivých fotonů rentgenového záření v jednotkách $[\unit{eV}]$.
+    \item 
+        Jakou vlnovou délku naměříte při rozptylu na úhel $90^{\mathrm{o}}$ a při zpětném rozptylu?
+	\item
+		Jaká bude rychlost elektronu rozptýleného elektronu po zpětném rozptylu? Předpokládá se, že před rozptylem byl elektron v klidu.
+    \item 
+        Jaké musí být minimální napětí $U$ mezi katodou a anodou rentgenky, abyste získali toto rentgenové záření o vlnové délce $\lambda$?
+    \end{enumerate}	
+\end{homework}
+
 % \begin{homework}
 % \exercise[9.10.2023]{Žárovka}
 % 	\begin{enumerate}
