--- a/Sbirka.tex
+++ b/Sbirka.tex
@@ -315,7 +315,7 @@
     \item 
         Jakou vlnovou délku naměříte při rozptylu na úhel $90^{\mathrm{o}}$ a při zpětném rozptylu?
 	\item
-		Jaká bude rychlost elektronu rozptýleného elektronu po zpětném rozptylu? Předpokládá se, že před rozptylem byl elektron v klidu.
+		Jaká bude rychlost rozptýleného elektronu po zpětném rozptylu? Předpokládá se, že před rozptylem byl elektron v klidu.
     \item 
         Jaké musí být minimální napětí $U$ mezi katodou a anodou rentgenky, abyste získali toto rentgenové záření o vlnové délce $\lambda$?
     \end{enumerate}	
